@@ -191,7 +191,7 @@ function initCharts() {
         /* Total builds */
         // create query
         var queryTotalBuilds = new Keen.Query("count", {
-            eventCollection: "builds",
+            eventCollection: "build_jobs",
             timezone: TIMEZONE_SECS,
             timeframe: keenTimeframe
         });
@@ -208,10 +208,10 @@ function initCharts() {
         /* Total builds passed */
         // create query
         var queryTotalBuildsPassed = new Keen.Query("count", {
-            eventCollection: "builds",
+            eventCollection: "build_jobs",
             timezone: TIMEZONE_SECS,
             timeframe: keenTimeframe,
-            filters: [{"property_name":"build.result","operator":"eq","property_value":"passed"}]
+            filters: [{"property_name":"job.result","operator":"eq","property_value":"passed"}]
         });
         queriesTimeframe.push(queryTotalBuildsPassed);
 
@@ -245,10 +245,10 @@ function initCharts() {
         /* Total builds passed */
         // create query
         var queryTotalBuildsFailed = new Keen.Query("count", {
-            eventCollection: "builds",
+            eventCollection: "build_jobs",
             timezone: TIMEZONE_SECS,
             timeframe: keenTimeframe,
-            filters: [{"property_name":"build.result","operator":"in","property_value":["failed","errored"]}]
+            filters: [{"property_name":"job.result","operator":"in","property_value":["failed","errored"]}]
         });
         queriesTimeframe.push(queryTotalBuildsFailed);
 
@@ -282,10 +282,10 @@ function initCharts() {
         /* average build time of all stages */
         // create query
         var queryAverageBuildTime = new Keen.Query("average", {
-            eventCollection: "builds",
+            eventCollection: "build_jobs",
             timezone: TIMEZONE_SECS,
             timeframe: keenTimeframe,
-            targetProperty: "build.duration"
+            targetProperty: "job.duration"
         });
         queriesTimeframe.push(queryAverageBuildTime);
 
@@ -355,8 +355,8 @@ function initCharts() {
             timezone: TIMEZONE_SECS,
             timeframe: keenTimeframe,
             interval: keenInterval,
-            targetProperty: "build.build",
-            groupBy: "build.branch"
+            targetProperty: "job.build",
+            groupBy: "job.branch"
         });
         queriesTimeframe.push(queryBuilds);
         queriesInterval.push(queryBuilds);
@@ -380,8 +380,8 @@ function initCharts() {
             eventCollection: "build_stages",
             timezone: TIMEZONE_SECS,
             timeframe: keenTimeframe,
-            targetProperty: "build.build",
-            groupBy: "build.branch"
+            targetProperty: "job.build",
+            groupBy: "job.branch"
         });
         queriesTimeframe.push(queryTotalBuildsBranch);
 
@@ -396,28 +396,28 @@ function initCharts() {
         /* Average buildtime per time of day */
         // create query
         var queryAvgBuildtimeHourLastWeek = new Keen.Query("average", {
-            eventCollection: "builds",
+            eventCollection: "build_jobs",
             timezone: TIMEZONE_SECS,
             timeframe: TIMEFRAME_LAST_WEEK,
-            targetProperty: "build.duration",
-            groupBy: "build.started_at.hour_24",
-            filters: [{"property_name":"build.started_at.hour_24","operator":"exists","property_value":true}]
+            targetProperty: "job.duration",
+            groupBy: "job.started_at.hour_24",
+            filters: [{"property_name":"job.started_at.hour_24","operator":"exists","property_value":true}]
         });
         var queryAvgBuildtimeHourLastMonth = new Keen.Query("average", {
-            eventCollection: "builds",
+            eventCollection: "build_jobs",
             timezone: TIMEZONE_SECS,
             timeframe: TIMEFRAME_LAST_MONTH,
-            targetProperty: "build.duration",
-            groupBy: "build.started_at.hour_24",
-            filters: [{"property_name":"build.started_at.hour_24","operator":"exists","property_value":true}]
+            targetProperty: "job.duration",
+            groupBy: "job.started_at.hour_24",
+            filters: [{"property_name":"job.started_at.hour_24","operator":"exists","property_value":true}]
         });
         var queryAvgBuildtimeHourLastYear = new Keen.Query("average", {
-            eventCollection: "builds",
+            eventCollection: "build_jobs",
             timezone: TIMEZONE_SECS,
             timeframe: TIMEFRAME_LAST_YEAR,
-            targetProperty: "build.duration",
-            groupBy: "build.started_at.hour_24",
-            filters: [{"property_name":"build.started_at.hour_24","operator":"exists","property_value":true}]
+            targetProperty: "job.duration",
+            groupBy: "job.started_at.hour_24",
+            filters: [{"property_name":"job.started_at.hour_24","operator":"exists","property_value":true}]
         });
 
         // generate chart
@@ -439,7 +439,7 @@ function initCharts() {
             var chartData = mergeSeries(
                 this.data,
                 indexCaptions,
-                "build.started_at.hour_24",
+                "job.started_at.hour_24",
                 timeframeCaptions
             );
 
@@ -465,42 +465,42 @@ function initCharts() {
         /* Average buildtime per day of week */
         // create query
         var queryAvgBuildtimeWeekDayLastWeek = new Keen.Query("average", {
-            eventCollection: "builds",
+            eventCollection: "build_jobs",
             timezone: TIMEZONE_SECS,
             timeframe: TIMEFRAME_LAST_WEEK,
-            targetProperty: "build.duration",
-            groupBy: "build.started_at.day_of_week",
+            targetProperty: "job.duration",
+            groupBy: "job.started_at.day_of_week",
             filters: [
                 {
-                    "property_name":"build.started_at.day_of_week",
+                    "property_name":"job.started_at.day_of_week",
                     "operator":"exists",
                     "property_value":true
                 }
             ]
         });
         var queryAvgBuildtimeWeekDayLastMonth = new Keen.Query("average", {
-            eventCollection: "builds",
+            eventCollection: "build_jobs",
             timezone: TIMEZONE_SECS,
             timeframe: TIMEFRAME_LAST_MONTH,
-            targetProperty: "build.duration",
-            groupBy: "build.started_at.day_of_week",
+            targetProperty: "job.duration",
+            groupBy: "job.started_at.day_of_week",
             filters: [
                 {
-                    "property_name":"build.started_at.day_of_week",
+                    "property_name":"job.started_at.day_of_week",
                     "operator":"exists",
                     "property_value":true
                 }
             ]
         });
         var queryAvgBuildtimeWeekDayLastYear = new Keen.Query("average", {
-            eventCollection: "builds",
+            eventCollection: "build_jobs",
             timezone: TIMEZONE_SECS,
             timeframe: TIMEFRAME_LAST_YEAR,
-            targetProperty: "build.duration",
-            groupBy: "build.started_at.day_of_week",
+            targetProperty: "job.duration",
+            groupBy: "job.started_at.day_of_week",
             filters: [
                 {
-                    "property_name":"build.started_at.day_of_week",
+                    "property_name":"job.started_at.day_of_week",
                     "operator":"exists",
                     "property_value":true
                 }
@@ -519,7 +519,7 @@ function initCharts() {
             var chartData = mergeSeries(
                 this.data,
                 indexCaptions,
-                "build.started_at.day_of_week",
+                "job.started_at.day_of_week",
                 timeframeCaptions
             );
 
